# sppark

./: .clang-format  .gitignore  README.md  go.mod  go.sum
.github/workflows/: ci.yml
ec/: affine_t.hpp  jacobian_t.hpp  xyzz_t.hpp
ff/: alt_bn128-fp2.hpp  alt_bn128.hpp  baby_bear.hpp  batch_inversion.hpp  bb31_t.cuh  bls12-377-fp2.hpp  bls12-377.hpp  bls12-381-fp2.hpp  bls12-381.hpp  curve25519.hpp  gl64_t.cuh  gl64_t.hip  goldilocks.hpp  mersenne31.hpp  mont32_t.cuh  mont32_t.hip  mont_t.cuh  mont_t.hip  pasta.hpp  shfl.cuh
go/: README.md  sppark.go
msm/: batch_addition.cuh  pippenger.cuh  pippenger.hpp  sort.cuh
ntt/: gen_twiddles.cu  kernels.cu  ntt.cuh  parameters.cuh
ntt/kernels/: ct_mixed_radix_narrow.cu  ct_mixed_radix_wide.cu  gs_mixed_radix_narrow.cu  gs_mixed_radix_wide.cu
ntt/parameters/: alt_bn128.h  baby_bear.h  bls12_377.h  bls12_381.h  goldilocks.h
poc/blst-cuda/: Cargo.toml  build.rs
poc/go/: cgo_sppark.h  go.mod  poc.cu  poc.go  poc_test.go
poc/msm-cuda/: Cargo.toml  build.rs  curve25519_msm  run_curve25519_msm.sh
poc/msm-cuda-cpp/: bench.cu  build.sh  demo.cu  util.cpp
poc/ntt-cuda/: Cargo.toml  build.rs  go.mod
poc/ntt-cuda/cuda/: ntt_api.cu
poc/ntt-cuda/go/: goldilocks.go
poc/ntt-cuda/src/: lib.rs
poc/ntt-cuda/tests/: ntt.rs
polynomial/: div_by_x_minus_z.cuh  prefix_op.cuh
rust/: Cargo.toml  build.rs  publish.sh
rust/src/: build.rs  lib.cpp  lib.rs
util/: all_gpus.cpp  all_gpus.cu  cuda2hip.hpp  cuda_timer_t.cuh  exception.cuh  exception.hpp  gpu_t.cuh  rusterror.h  slice_t.hpp  thread_pool_t.hpp  vec2d_t.hpp
(+28 files in other folders)
